<resources>
    <string name="Echec_de_modification">Error al editar</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">AGREGAR AL BILLETERO</string>
    <string name="add_to_favorite">AGREGAR A FAVORITOS</string>
    <string name="add_to_favorite_ride">Añadir al paseo favorito</string>
    <string name="already_registered">YA INSCRITO, CONECTE</string>
    <string name="amount">Cantidad</string>
    <string name="an_error_occurred_while_sending_your_booking">Se produjo un error al enviar su reserva.</string>
    <string name="annule_avec_succes">Cancelado exitosamente</string>
    <string name="annuler">CANCELAR</string>
    <string name="app_name">Taxi Cliente</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">APLICAR</string>
    <string name="assurez_vous_d_tre_connecter_internet_et_tapez_sur_les_nuages">Asegúrate de conectarte a internet y tocar las nubes</string>
    <string name="book">ORDENAR AHORA</string>
    <string name="book_later">PASEO DE LIBRO</string>
    <string name="book_now">RESERVAR AHORA</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brand">Marca</string>
    <string name="brand_">Marca:</string>
    <string name="bt_add_card">Add card</string>
    <string name="bt_cancel">@android:string/cancel</string>
    <string name="bt_card_details">Card Details</string>
    <string name="bt_card_not_accepted">Card not accepted</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>
    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_cardholder_name_required">Cardholder name is required</string>
    <string name="bt_cid">CID</string>
    <string name="bt_confirm">Confirm</string>
    <string name="bt_confirm_enrollment">Confirm Enrollment</string>
    <string name="bt_country_code_invalid">Country code is invalid</string>
    <string name="bt_country_code_required">Country code is required</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cvn">CVN</string>
    <string name="bt_cvv">CVV</string>
    <string name="bt_cvv_invalid">%s is invalid</string>
    <string name="bt_cvv_required">%s is required</string>
    <string name="bt_delete">Delete</string>
    <string name="bt_delete_confirmation_description">You will no longer be able to use this payment method in this app.</string>
    <string name="bt_delete_confirmation_title">Delete payment method?</string>
    <string name="bt_descriptor_amex">Amex</string>
    <string name="bt_descriptor_android_pay">Android Pay</string>
    <string name="bt_descriptor_diners">Diners</string>
    <string name="bt_descriptor_discover">Discover</string>
    <string name="bt_descriptor_google_pay">Google Pay</string>
    <string name="bt_descriptor_jcb">JCB</string>
    <string name="bt_descriptor_maestro">Maestro</string>
    <string name="bt_descriptor_mastercard">MasterCard</string>
    <string name="bt_descriptor_pay_with_venmo">Venmo</string>
    <string name="bt_descriptor_paypal">PayPal</string>
    <string name="bt_descriptor_unionpay">UnionPay</string>
    <string name="bt_descriptor_unknown">Credit or Debit Card</string>
    <string name="bt_descriptor_visa">Visa</string>
    <string name="bt_done">Done</string>
    <string name="bt_edit">Edit</string>
    <string name="bt_expiration_invalid">Expiration date is invalid</string>
    <string name="bt_expiration_required">Expiration date is required</string>
    <string name="bt_form_hint_card_number">Card Number</string>
    <string name="bt_form_hint_cardholder_name">Cardholder Name</string>
    <string name="bt_form_hint_country_code">Country Code</string>
    <string name="bt_form_hint_cvv">@string/bt_cvv</string>
    <string name="bt_form_hint_expiration">Expiration Date</string>
    <string name="bt_form_hint_mobile_number">Mobile Number</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>
    <string name="bt_mobile_number_invalid">Mobile number is invalid</string>
    <string name="bt_mobile_number_required">Mobile number is required</string>
    <string name="bt_month">Month</string>
    <string name="bt_next">Next</string>
    <string name="bt_other">Other</string>
    <string name="bt_postal_code_invalid">Postal code is invalid</string>
    <string name="bt_postal_code_required">Postal code is required</string>
    <string name="bt_recent">Recent</string>
    <string name="bt_scan_with_card_io">Scan with card.io</string>
    <string name="bt_select_payment_method">Select Payment Method</string>
    <string name="bt_sms_code">SMS Code</string>
    <string name="bt_sms_code_required">SMS code is required</string>
    <string name="bt_sms_code_sent_to">Enter the SMS code sent to %s</string>
    <string name="bt_unionpay_mobile_number_explanation">Enrollment may be required for this card. An SMS code will be sent to this number if required.</string>
    <string name="bt_unionpay_sms_code_invalid">SMS code is invalid</string>
    <string name="bt_use_a_different_phone_number">Use a different phone number</string>
    <string name="bt_vault_manager_delete_failure">We couldn\'t delete your payment method right now, try again later</string>
    <string name="bt_vault_manager_title">Edit Saved</string>
    <string name="bt_year">Year</string>
    <string name="cancel">CANCELAR</string>
    <string name="canceled_successfull">Cancelado exitosamente</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_a_favorite_ride">Elige un paseo favorito</string>
    <string name="choose_a_payment_method">Elija un método de pago</string>
    <string name="choose_a_rider">Elige una conductora</string>
    <string name="choose_return_date_time">Elija fecha y hora de regreso</string>
    <string name="choose_your_rider">Elige tu chofer</string>
    <string name="choose_your_vehicle_type">Elige tu tipo de vehículo</string>
    <string name="close">CERCA</string>
    <string name="co_t">Costo</string>
    <string name="color">Color</string>
    <string name="comment">Comentario</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="communicate_to_any_driver_by_calling_or_writing_a_message">Comuníquese con cualquier conductor llamando o escribiendo un mensaje.</string>
    <string name="complete">COMPLETA</string>
    <string name="completed_successfull">Completado satisfactoriamente</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="confirm_password">Confirma la contraseña</string>
    <string name="confirmed_successfull">Confirmado con éxito</string>
    <string name="confirmez_le_nouveau_mot_de_passe">Confirma la nueva contraseña</string>
    <string name="contact">Contacto</string>
    <string name="cost_">Costo:</string>
    <string name="date_d_but">Fecha de inicio</string>
    <string name="date_fin">Fecha final</string>
    <string name="email">Email</string>
    <string name="enregistrer">SALVAR</string>
    <string name="enter_favorite_name">Ingrese el nombre favorito</string>
    <string name="envoyer">ENVIAR</string>
    <string name="favorite_name">Nombre favorito</string>
    <string name="first_name">Nombre de pila</string>
    <string name="information_sur_la_r_servation">Información de reserva</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="nombre_de_jour">Número de días</string>
    <string name="password">Contraseña</string>
    <string name="phone">Teléfono</string>
    <string name="send">ENVIAR</string>
    <string name="total_payer">Total a pagar</string>
</resources>