<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/calendarHeader" android:background="@color/defaultColor" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@+id/previousButton" android:layout_width="85dp" android:layout_height="0dp" android:src="@drawable/ic_arrow_left" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <ImageButton android:id="@+id/forwardButton" android:layout_width="85dp" android:layout_height="0dp" android:src="@drawable/ic_arrow_right" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <TextView android:textSize="18sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/currentDateLabel" android:layout_width="0dp" android:layout_height="56dp" app:layout_constraintLeft_toRightOf="@+id/previousButton" app:layout_constraintRight_toLeftOf="@+id/forwardButton" app:layout_constraintTop_toTopOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/abbreviationsBar" android:layout_width="match_parent" android:layout_height="40dp">
        <TextView android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/mondayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_monday" android:layout_weight="1"/>
        <TextView android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/tuesdayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_tuesday" android:layout_weight="1"/>
        <TextView android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/wednesdayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_wednesday" android:layout_weight="1"/>
        <TextView android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/thursdayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_thursday" android:layout_weight="1"/>
        <TextView android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/fridayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_friday" android:layout_weight="1"/>
        <TextView android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/saturdayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_saturday" android:layout_weight="1"/>
        <TextView android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/sundayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_sunday" android:layout_weight="1"/>
    </LinearLayout>
    <com.applandeo.materialcalendarview.extensions.CalendarViewPager android:id="@+id/calendarViewPager" android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
