<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/lot" android:layout_width="match_parent" android:layout_height="120dp" android:src="@drawable/ta" app:layout_constraintBottom_toTopOf="@+id/cardView" app:layout_constraintTop_toTopOf="0"/>
    <androidx.cardview.widget.CardView android:id="@+id/cardView" android:layout_width="match_parent" android:layout_height="280dp" android:layout_margin="15dp" app:cardCornerRadius="15dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.583">
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_layout_firstname_subs" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp">
            <EditText android:textSize="16sp" android:id="@+id/firstname_subs" android:background="@drawable/texto" android:layout_width="match_parent" android:layout_height="45dp" android:hint="@string/first_name" android:drawableRight="@drawable/ic_profile_con" android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_layout_phone_subs" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="70dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp">
            <EditText android:textSize="16sp" android:id="@+id/phone_subs" android:background="@drawable/texto" android:layout_width="match_parent" android:layout_height="45dp" android:hint="@string/phone" android:maxLength="15" android:drawableRight="@drawable/ic_phone_outline" android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_layout_email_insc" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="135dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp">
            <EditText android:textSize="16sp" android:id="@+id/email_insc" android:background="@drawable/texto" android:layout_width="match_parent" android:layout_height="45dp" android:hint="@string/email" android:drawableRight="@drawable/ic_message_outline" android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_layout_password_inc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="130dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp">
            <EditText android:textSize="16sp" android:id="@+id/password_subs" android:background="@drawable/texto" android:layout_width="match_parent" android:layout_height="45dp" android:hint="@string/password" android:maxLength="12" android:drawableRight="@drawable/ic_password_outline" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_layout_password_conf" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="200dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp">
            <EditText android:textSize="16sp" android:id="@+id/password_conf" android:background="@drawable/texto" android:layout_width="match_parent" android:layout_height="45dp" android:hint="@string/confirm_password" android:maxLength="12" android:drawableRight="@drawable/ic_password_outline" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ProgressBar android:layout_gravity="center" android:id="@+id/progressBar_subs" android:visibility="invisible" android:layout_width="30dp" android:layout_height="30dp" style="?android:attr/progressBarStyle"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/cardView">
        <Button android:textStyle="normal" android:textColor="@color/colorWhite" android:gravity="center" android:layout_gravity="center" android:id="@+id/send" android:background="@drawable/btnregis" android:paddingLeft="45dp" android:paddingRight="45dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/send" android:cursorVisible="false" android:layout_above="@+id/creer_compte" android:layout_centerHorizontal="true" android:layout_marginStart="15dp" android:layout_marginEnd="15dp"/>
        <Button android:textStyle="normal" android:textColor="@color/colorWhite" android:gravity="center" android:layout_gravity="center" android:id="@+id/i_have_account" android:background="@drawable/btnregis" android:paddingLeft="45dp" android:paddingRight="45dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginBottom="10dp" android:text="@string/already_registered" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAlignment="center" android:layout_marginStart="15dp" android:layout_marginEnd="15dp"/>
    </LinearLayout>
</LinearLayout>
